--- a/src/components/TopBar/styles.css
+++ b/src/components/TopBar/styles.css
@@ -3,10 +3,18 @@
   padding: 10px;
   border-radius: 30px;
 }
+
 .topBar-icons:hover {
   color: #383945;
 }
+
 .topBar-container p {
   color: white;
   font-size: 18px;
+}
+
+
+
+.turnOff {
+  color: red;
 }
