--- a/src/Pages/Home/styles.css
+++ b/src/Pages/Home/styles.css
@@ -12,15 +12,28 @@
 }
 
 .turnOn {
-    color: green;
     animation-name: blink;
     animation-iteration-count: infinite;
     animation-duration: 3s;
-    box-shadow: 0px 0px 10px 5px #888888;
     margin: 50px;
 }
 
-.turnOn:hover {
+.turnOn-dark {
+    color: green;
+    box-shadow: 0px 0px 10px 5px #888888;
+}
+
+.turnOn-dark:hover {
+    background-color: #444653;
+}
+
+.turnOn-light {
+    color: #888888;
+    box-shadow: 0px 0px 10px 5px green;
+    background-color: rgb(92, 85, 85);
+}
+
+.turnOn-light:hover {
     background-color: #444653;
 }
 
